--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <p>I pray that Allah showers you with peace and prosperity in this life and in the afterlife. Eid Ul Adha Mubarak!</p>
 <p>I pray that Allah showers you with peace and prosperity in this life and in the afterlife. Eid Ul Adha Mubarak!</p>
 </div>
+<p>Best wishes </p>
+<h5>Rakib</h5>
 <img src="gh.jpeg" alt=""width=100% title="Md.R.I.Rakib">
     </div>
 </body>
